# smart-manufact

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  test.py
app/adapters/indexing/: chunking.py  embedding_http.py  index_bodies.py  opensearch_docs.py
app/adapters/parsing/: docx_parser.py  image_extractor.py  md.py  pdf_parser.py  regex.py  table_extractor.py
app/application/services/: embedding_service.py  image_stage.py  page_stage.py  table_stage.py
app/application/usecases/: ingest_document.py  ingest_docx.py  ingest_pdf.py
app/common/: config.py  hash.py  retry.py
app/domain/: models.py
app/entrypoints/jobs/: run_ingest_docx.py  run_ingest_pdf.py
app/infra/storage/: neo4j.py  ollama_embedding.py  postgres.py
app/ports/: embedding.py  object_store.py  ocr.py  search_index.py
config/: config.yaml  config.yml  docx_config.yml
src/app/common/: batch.py  config.py  converter.py  hash.py  ids.py  jsonl.py  normalize.py  parser.py  runtime.py
src/app/indexing/: chunking.py  embedding.py  index_bodies.py  opensearch_docs.py  schemas.py
src/app/jobs/: run_ingest.py  run_ingest_docx.py  run_ingest_docx_to_pdf.py  run_ingest_pdf.py  run_parse_image_description.py
src/app/parsing/: image_extractor.py  md.py  ocr.py  pdf.py  regex.py  table_extractor.py
src/app/ports/: embedding.py
src/app/storage/: embedding.py  minio.py  neo4j.py  opensearch.py  postgres.py  qdrant.py
src/app/workflows/: common_ingest.py  ingest_docx.py  ingest_docx_to_pdf.py  ingest_pdf.py  parse_image_description.py  pdf_ingest.py
